Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -482,15 +482,8 @@ body > nav li li :link:hover::before {
 }
 
 
-
-
-
-
-
-
-
-
-
+address { }
+li address { display: inline-block }
 /* Table styling
   - https://adrianroselli.com/2018/02/tables-css-display-properties-and-aria.html
   - counter styling & fallback
